Fix word-spacing

--- a/packages/ketchup/src/components/ketchup-dash/ketchup-dash.scss
+++ b/packages/ketchup/src/components/ketchup-dash/ketchup-dash.scss
@@ -155,7 +155,7 @@
 
         .descr {
           text-align: left;
-          word-spacing: 100px;
+          word-spacing: 10000px;
         }
       }
     }
